[package]
name = "sns-records"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "Bindings and program code for the Solana Name Service Records protocol"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []



[dependencies]
solana-program = "1.18.0"
num_enum = "0.6.1"
borsh = "0.10.3"
thiserror = "1.0.24"
num-traits = "0.2"
num-derive = "0.3"
enumflags2 = "0.7.1"
bonfida-utils = "0.5.0"
spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
spl-name-service = { version = "0.3.1", features = ["no-entrypoint"] }
bytemuck = "1.13.1"
ahash = "0.8.3"

time-macros = "<0.2.10"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
hex = "0.4.3"
solana-security-txt = "1.1.1"
# Needs a devnet conditional feature
sns-warp-common = {version = "0.1.0", features = ["solana"]}

[dev-dependencies]
hexdump = "0.1.0"
solana-sdk = "1.16.0"
rand = "0.8.4"
arrayref = "0.3.6"
solana-program-test = "1.16.0"
tokio = {version="1.6", features = ["macros"]}



[lib]
crate-type = ["cdylib", "lib"]
